[tool.poetry]
name = "meeseeks"
version = "0.1.0"
description = "A Singleton python project"
authors = ["Ximit Gaia <im.ximit@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mutatest = "^3.1.0"

[tool.poetry.scripts]
test = 'mutatest -n 40 -s meeseeks/ -t "pytest --cov=meeseeks --cov-report term-missing"'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
