[tool.poetry]
name = "meeseeks-singleton"
version = "0.4.1"
description = "A Singleton python project"
authors = ["Ximit Gaia <im.ximit@gamil.com>"]
readme = "README.md"
packages = [
    { include = "meeseeks"},
    { include = "meeseeks/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mutatest = "^3.1.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/CenturyBoys/meeseeks-singleton"
"Bug Tracker" = "https://github.com/CenturyBoys/meeseeks-singleton/issues"
